syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/vllvll/keepa/proto";

message AuthRequest {
  string login = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}


message GetBankCardRequest {
  int64 id = 1;
}

message CreateBankCardRequest {
  string meta = 1;
  string number = 2;
  string holder = 3;
  string cvv = 4;
}

message UpdateBankCardRequest {
  string meta = 1;
  int64 id = 2;
  string number = 3;
  string holder = 4;
  string cvv = 5;
}

message DeleteBankCardRequest {
  int64 id = 1;
}

message BankCardResponse {
  string meta = 1;
  int64 id = 2;
  string number = 3;
  string holder = 4;
  string cvv = 5;
  google.protobuf.Timestamp updated_at = 6;
}


message GetTextRequest {
  int64 id = 2;
}

message CreateTextRequest {
  string meta = 1;
  string text = 2;
}

message UpdateTextRequest {
  string meta = 1;
  int64 id = 2;
  string text = 3;
}

message DeleteTextRequest {
  int64 id = 2;
}

message TextResponse {
  string meta = 1;
  int64 id = 2;
  string text = 3;
  google.protobuf.Timestamp updated_at = 4;
}


message GetBinaryRequest {
  int64 id = 1;
}

message CreateBinaryRequest {
  string meta = 1;
  bytes binary = 2;
}

message UpdateBinaryRequest {
  string meta = 1;
  int64 id = 2;
  bytes binary = 3;
}

message DeleteBinaryRequest {
  int64 id = 1;
}

message BinaryResponse {
  string meta = 1;
  int64 id = 2;
  bytes binary = 3;
  google.protobuf.Timestamp updated_at = 4;
}

service Keepa {
  rpc Login(AuthRequest) returns (AuthResponse);
  rpc Register(AuthRequest) returns (AuthResponse);

  rpc GetBankCard(GetBankCardRequest) returns (BankCardResponse);
  rpc CreateBankCard(CreateBankCardRequest) returns (BankCardResponse);
  rpc UpdateBankCard(UpdateBankCardRequest) returns (BankCardResponse);
  rpc DeleteBankCard(DeleteBankCardRequest) returns (google.protobuf.Empty);

  rpc GetText(GetTextRequest) returns (TextResponse);
  rpc CreateText(CreateTextRequest) returns (TextResponse);
  rpc UpdateText(UpdateTextRequest) returns (TextResponse);
  rpc DeleteText(DeleteTextRequest) returns (google.protobuf.Empty);

  rpc GetBinary(GetBinaryRequest) returns (BinaryResponse);
  rpc CreateBinary(CreateBinaryRequest) returns (BinaryResponse);
  rpc UpdateBinary(UpdateBinaryRequest) returns (BinaryResponse);
  rpc DeleteBinary(DeleteBinaryRequest) returns (google.protobuf.Empty);
}
